# hitoq

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  HTTPS-SETUP-VERIFICATION-GUIDE.md  INPUT-VALIDATION-SECURITY-REVIEW.md  MVP-DEPLOY-CHECKLIST.md  README.md  SECURITY-SETUP-GUIDE.md  cookies.txt  docker-compose.prod.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  fix_csrf_final.py  pyproject.toml  pytest.ini  seed_questions.py
backend/alembic/: env.py
backend/alembic/versions/: 1b8930c839b6_add_self_introduction_field_to_users.py  1cf365427cbd_remove_self_introduction_from_users.py  482029939c87_remove_bucket_list_functionality.py  5b7804721707_add_visits_table_and_privacy_settings.py  69f269808e64_add_missing_self_introduction_profile_.py  719c718fd264_add_parent_message_id_for_replies.py  78c914bb225d_add_notification_level_to_users.py  b1199553bafc_add_last_login_at_to_users_table.py  b5ff33482e52_add_template_id_column_to_questions.py  d66efaf79efc_add_user_blocks_and_reports_tables.py  dddb810aab47_add_template_id_to_questions.py  e00cb5f5c5bd_initial_database_schema_with_updated_.py  e12ea67e6bca_initial_migration_with_comment_like_.py  e7275d6f281e_update_questions_to_flat_category_.py  f55fcfe2b539_add_messages_functionality.py  fd6b6177424f_add_message_and_answer_likes_tables.py
backend/scripts/: update_config.py
backend/src/: config.py  logging_config.py  main.py  middleware.py
backend/src/config/: config_versions.yaml  default_labels.yaml
backend/src/db/: session.py  (+1 more)
backend/test/: README.md  conftest.py  mock_data.py  mock_router.py  test_auth.py  test_basic.py  test_bucket_list.py  test_design.md  test_fixtures.py  test_integration.py  test_profile.py  test_qna.py  test_services.py  test_users.py
(+405 files in other folders)
