[project]
name = "hitoq"
version = "0.1.0"
description = "Q&A-based profile viewer"
authors = [
    {name="Gengaru", email="gengaru617science@gmail.com"}
]
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["SNS", "Profile"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.41",
    "pyhumps>=3.8.0",
    "pyjwt>=2.10.1",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.4",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "slowapi>=0.1.9",
    "types-pyyaml>=6.0.12.20250516",
    "pydantic>=2.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "mypy>=1.15.0",
    "pydantic[mypy]>=2.10.2",
    "pre-commit>=4.2.0",
    "types-requests>=2.32.0.20250328",
    "freezegun>=1.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = false
warn_unused_configs = true
allow_untyped_globals = true
disable_error_code = ["misc", "valid-type", "union-attr", "assignment", "call-overload", "arg-type", "return", "return-value", "attr-defined", "import-untyped", "call-arg"]

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
